--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -135,7 +135,7 @@
       </div>
       <!--aside-block-->
 
-      <div class="aside-block">
+      <div class="aside-block" ng-hide="true">
         <h5 class="uppercase title">
                     <span class="glyphicon glyphicon-comment left-icon" aria-hidden="true"></span>
                     <strong>Chat</strong>
