--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -109,7 +109,7 @@
 
         <h5 class="sub-title" data-toggle="collapse" data-target="#collapse3">
                     <span class="glyphicon glyphicon-chevron-down left-icon" aria-hidden="true"></span>
-                    My Signed Contracts
+                    My won lead
                 </h5>
         <div class="collapse" id="collapse3">
           <ul class="main-nav">
