--- a/client/components/address-book/right_bar.html
+++ b/client/components/address-book/right_bar.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="form-group">
-	<strong>Signed Contracts</strong>
+	<strong>Won lead</strong>
 	<h5>{{abrbCtrl.countBy.SIGN}}</h5>
 </div>
 
