--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -63,7 +63,7 @@
                     <a href="" class="create-btn" title="create new" ui-sref="main.newLead({status:'lead'})">
                         <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
                     </a>
-                    <div class="dropdown">
+                    <div class="dropdown" ng-hide="true">
                         <span class="glyphicon glyphicon-option-horizontal" aria-hidden="true" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
                         <ul class="dropdown-menu dropdown-menu-right">
                             <li class="current"><a href="#">All</a></li>
@@ -88,7 +88,7 @@
                     <a href="" class="create-btn" title="create new" ui-sref="main.newLead({status:'opportunity'})">
                         <span class="glyphicon glyphicon-plus-sign" aria-hidden="true" ></span>
                     </a>
-                    <div class="dropdown">
+                    <div class="dropdown" ng-hide="true">
                         <span class="glyphicon glyphicon-option-horizontal" aria-hidden="true" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></span>
                         <ul class="dropdown-menu dropdown-menu-right">
                             <li class="current"><a href="#">All</a></li>
